# os_nikulina

./: .gitignore
lab1.2/: README.md
lab1.3/: README.md  hello.out
lab1/lab1.1/: README.md
lab1/lab1.2/: hello.c  hello_from_static_lib.c
lab1/lab1.3/: README.md  hello.c  hello_from_dynamic_lib.c
lab2/lab2.1/: hello_syscall.c  hello_write.c
lab2/lab2.2/: without_syscall.c
lab2/lab2.3/: ptrace.c
lab3/lab3.1/: CMakeLists.txt  backwards.c
lab3/lab3.2/: main.c
lab3/lab3.3/: pagemap.c
lab4/: 1a.c  1e.c  1h.c
lab4/lab4.1/: 1d.c
lab4/lab4.2/: 2a.c  2c.c
lab4/lab4.3/: malloc.c
lab5/lab5.1/: main.c
lab5/lab5.2/: zombie.c
lab5/lab5.3/: clone.c  res_file
lab6/lab6.1/: shared_memory.c  shared_memory.oud
lab6/lab6.2/: pipe.c
lab6/lab6.3/: domain_client.c  domain_server.c
lab7/lab7.1/: udp_client.c  udp_server.c
lab7/lab7.2/: tcp_client.c  tcp_server.c
lab7/lab7.3/: poll_client.c  poll_server.c
lab8/: README.md  main.c
