cmake_minimum_required(VERSION 3.0)
project(lab3)

add_executable(YourExecutableName backwards.c
        ../../lab4/lab4.1/1a.c
        ../../lab4/lab4.1/1d.c
        ../../lab4/lab4.1/1e.c
        ../../lab4/lab4.1/1h.c
        ../../lab4/lab4.2/2a.c
        ../../lab4/lab4.2/2a.c
        ../../lab4/lab4.2/2a.c
        ../../lab4/lab4.2/2c.c
        ../../lab5/lab5.1/main.c
        ../../lab5/lab5.2/zombie.c
        ../../lab6/lab6.1/shared_memory.c
        ../../lab6/lab6.2/pipe.c
        ../../lab7/lab7.1/udp_client.c
        ../../lab7/lab7.1/udp_server.c
        ../../lab8/main.c
        ../../lab7/lab7.2/tcp_client.c
        ../../lab7/lab7.2/tcp_server.c
        ../../lab5/lab5.3/clone.c
        ../../lab7/lab7.3/poll_server.c
        ../../lab7/lab7.3/poll_client.c
        ../lab3.3/pagemap.c
        ../../lab6/lab6.3/domain_client.c
        ../../lab4/lab4.3/malloc.c
)